[package]
name = "merkeltreerust"
version = "0.1.3"
edition = "2021"

description = "🌳 The simple and easy implementation of Merkle Tree"
authors = ["hxfjsw <hxfjsw@qq.com>"]
repository = "https://github.com/hxfjsw/merkletreerust.git"
readme = "readme.md"
license = "MIT"
keywords = [
  "merkle-tree",
  "merkle-proof",
  "merkle-root",
  "keccak256",
  "blockchain"
]

[dependencies]
hex="0.4.3"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }